<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/c_up"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="160dp"
        android:adjustViewBounds="true"
        android:src="@drawable/c_top" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="180dp"
        android:text="@string/store_address"
        android:textColor="#ffffffff" />

    <ImageView
        android:id="@+id/c_bottom"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="-6dp"
        android:layout_marginLeft="100dp"
        android:adjustViewBounds="true"
        android:src="@drawable/c_bottom" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/c_bottom"
        android:layout_marginLeft="100dp"
        android:text="@string/message_center"
        android:textColor="#ffffffff" />

    <ImageView
        android:id="@+id/c_left"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="-4dp"
        android:layout_marginTop="350dp"
        android:adjustViewBounds="true"
        android:src="@drawable/c_left" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="-50dp"
        android:layout_marginTop="350dp"
        android:layout_toRightOf="@id/c_left"
        android:text="@string/coupon"
        android:textColor="#ffffffff" />

    <ImageView
        android:id="@+id/c_right"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginRight="-4dp"
        android:layout_marginTop="350dp"
        android:adjustViewBounds="true"
        android:src="@drawable/c_right" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginRight="32dp"
        android:layout_marginTop="356dp"
        android:text="@string/product_list"
        android:textColor="#ffffffff" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="120dp"
        android:text="麦当劳餐厅"
        android:textColor="#c8ffffff"
        android:textSize="30dp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="160dp"
        android:text="源自1954年"
        android:textColor="#c8ffffff"
        android:textSize="15dp"
        android:textStyle="bold" />

</RelativeLayout>